# html5minify

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  pr.yml
benches/: default.rs
htmlminify_cli/: Cargo.toml  README.md
htmlminify_cli/src/: main.rs
src/: lib.rs
testdata/: 0001-simple.html  0001-simple.html.minified  0002-retain-opening-body.html  0002-retain-opening-body.html.minified  0002-w3-homepage.html  0002-w3-homepage.html.minified  0003-wikipedia-homepage.html  0003-wikipedia-homepage.html.minified  0004-wikipedia-big.html  0004-wikipedia-big.html.minified  0005-bbc-news.html  0005-bbc-news.html.minified  0006-rust-lang.html.minified  0007-apple.html  0007-apple.html.minified  0008-amazon-uk.html  0008-amazon-uk.html.minified
