[package]
name = "html5minify"
version = "0.1.0"
authors = ["Martin Gallagher <martin@praegressus.com>"]
edition = "2018"
description = "HTML5 minifier implementation based on Servo's html5ever."
homepage = "https://martingallagher.com/"
repository = "https://github.com/martingallagher/html5minify.git"
documentation = "https://docs.rs/html5minify/"
readme = "README.md"
keywords = ["minify", "minifier", "minification", "html", "html5"]
license = "MIT"

[dependencies]
html5ever = "0.23"
